--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
     "name": "assignment-3",
     "version": "1.0.0",
     "description": "WCAG 2.0 Level 'A'-compliant template for Professional Certificate in Web Accessibility Assignment 3",
-    "main": "./js/index.js",
+    "main": "index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "scss": "node-sass --output-style compressed -o dist/css src/scss",
-        "serve": "light-server --serve dist -w 'dist/css/*.css, **/*.html'",
-        "start": "npm run serve && npm run scss"
+        "serve": "browser-sync start -b 'google chrome' --server --files 'dist/css/*.css, **/*.html'",
+        "watch:css": "onchange 'src/scss' -- npm run scss",
+        "start": "run-p serve watch:css"
     },
     "author": "David McKinnon",
     "license": "UNLICENCED",
     "devDependencies": {
-        "light-server": "^2.6.4",
+        "browser-sync": "^2.26.7",
         "node-sass": "^4.13.1",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "onchange": "^6.1.0"
     }
 }
