--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "scss": "node-sass --output-style compressed -o dist/css src/scss",
-        "serve": "browser-sync start -b 'google chrome' --server --files 'dist/css/*.css, **/*.html'",
+        "serve": "browser-sync start -b --server --files 'dist/css/*.css, **/*.html'",
         "watch:css": "onchange 'src/scss' -- npm run scss",
         "start": "run-p serve watch:css"
     },
-    "author": "David McKinnon",
+    "author": "David R McKinnon",
     "license": "UNLICENCED",
     "devDependencies": {
         "browser-sync": "^2.26.7",
